<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".LogIn">

  <ImageView
    android:id="@+id/app_logo"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:src="@drawable/image"
      android:background="@drawable/edt_background"
    android:contentDescription="@string/user_image" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/app_logo"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edt_background"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edt_email"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edt_background"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="text"
        android:textStyle="bold" />
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password">
      <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
          android:layout_weight="1"
        android:id="@+id/btnLogin"
        android:text="@string/log_in"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
          android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"/>
      <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
          android:layout_weight="1"
        android:id="@+id/btnSignUp"
        android:text="@string/sign_up"
        android:background="@drawable/btn_background"
        android:textColor="@color/white"
          android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
          style="?android:attr/buttonBarButtonStyle" />
</LinearLayout>
</RelativeLayout>